--- a/Sem 2/DT/Lab 3/3.3.2/package.json
+++ b/Sem 2/DT/Lab 3/3.3.2/package.json
@@ -1,12 +1,12 @@
 {
   "name": "it-prototype",
   "description": "Node-Express Server",
-  "private": true;
+  "private": true,
   "version": "0.0.1",
   "dependencies": {
-    "body-parser": "^1.12.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "3.x"
+    "express": "^4.18.2"
   },
   "main": "Prototype",
   "devDependencies": {}
